testign to see if this updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<main>
 		<section>
 			<h2 id="productTitle"></h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget dui massa. Sed vitae nibh vel elit ultrices tempor eu ac velit. Donec placerat, sapien vel pharetra consequat, sapien purus tincidunt nulla, sit amet euismod magna elit ac mi.</p>
+			<p>testing to see if this updated</p>
             <button type="submit" id="addToCart" aria-label="Add Product to Cart">
                 Add To Cart
             </button>
