added english language to html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Headless</title>
@@ -22,7 +22,7 @@
 	<footer>
 		<!-- <p>&copy; 2023 My Website. All Rights Reserved.</p> -->
 	</footer>
-    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <!-- <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script> -->
 	<script src="script.js"></script>
 
 </body>
