--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<main>
 		<section>
 			<h2 id="productTitle"></h2>
-			<p>testing to see if this updated</p>
+			<p>added english language</p>
             <button type="submit" id="addToCart" aria-label="Add Product to Cart">
                 Add To Cart
             </button>
