--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<main>
 		<section>
 			<h2 id="productTitle"></h2>
-			<p>added english language</p>
+			<p>mved graph to scratchpad</p>
             <button type="submit" id="addToCart" aria-label="Add Product to Cart">
                 Add To Cart
             </button>
@@ -22,7 +22,7 @@
 	<footer>
 		<!-- <p>&copy; 2023 My Website. All Rights Reserved.</p> -->
 	</footer>
-    <!-- <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script> -->
+
 	<script src="script.js"></script>
 
 </body>
