--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 	<title>Headless</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +13,7 @@
 	<main>
 		<section>
 			<h2 id="productTitle"></h2>
-			<p>mved graph to scratchpad</p>
+			<p>updated meta</p>
             <button type="submit" id="addToCart" aria-label="Add Product to Cart">
                 Add To Cart
             </button>
