updated all mentions of meta

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 	<title>Headless</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +12,7 @@
 	<main>
 		<section>
 			<h2 id="productTitle"></h2>
-			<p>updated meta</p>
+			<p>removed all mentions of script</p>
             <button type="submit" id="addToCart" aria-label="Add Product to Cart">
                 Add To Cart
             </button>
