--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<main>
 		<section>
 			<h2 id="productTitle"></h2>
-			<p>axdded meta</p>
+			<p>added graph</p>
             <button type="submit" id="addToCart" aria-label="Add Product to Cart">
                 Add To Cart
             </button>
@@ -24,6 +24,7 @@
 		<!-- <p>&copy; 2023 My Website. All Rights Reserved.</p> -->
 	</footer>
 
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 	<script src="script.js"></script>
 
 </body>
