--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <meta name="permissions-policy" content="interest-cohort=()"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Headless Shopify Vanilla JS Website">
 	<title>Headless</title>
 	<link rel="stylesheet" href="style.css">
 </head>
