--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Headless Shopify Vanilla JS Website">
 	<title>Headless</title>
-	<link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <script async src="script.js"></script>
+	<link async rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
@@ -37,8 +39,8 @@
 		<!-- <p>&copy; 2023 My Website. All Rights Reserved.</p> -->
 	</footer>
 
-    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-	<script src="script.js"></script>
+
+	
 
 </body>
 </html>
