--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Headless Shopify Vanilla JS Website">
+    <meta name="description" content="Kristina Diamond, web developer">
 	<title>Headless</title>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script async src="script.js"></script>
@@ -11,36 +11,18 @@
 </head>
 <body>
 	<header>
-        <div>
-            <h1 id="productTitle"></h1>
-            <div id="storeUserID" user-id=""></div>
-            <div id="storeVariantID" variant-id=""></div>
-        </div>
-        <div>
-            <div id="cartQty">0</div>
-        </div>
-		
+        <h1>
+            <span>KRISTINA</span>
+            <span>DIAMOND</span>
+        </h1>
+        <h2>web developer, specializing in all things shopify and e-commerce</h2>
 	</header>
 	<main>
 		<section>
-            <div>
-                <img id="productImage" src="" alt="Description of the image" width="800">
-            </div>
-            <button type="submit" id="addToCart" aria-label="Add Product to Cart">
-                Add To Cart
-            </button>
-
-            <a id="checkOut" href="" title="Go to Checkout page" aria-label="Link to checkout page">CHECKOUT</a>
-
-            
 		</section>
 	</main>
 	<footer>
 		<!-- <p>&copy; 2023 My Website. All Rights Reserved.</p> -->
 	</footer>
-
-
-	
-
 </body>
 </html>
